# blox

./: .blox-history  .dockerignore  .gitignore  Cargo.toml  Design.adoc  Dockerfile  build.rs  flake.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: rust.yml
blox-assets/: Cargo.toml
blox-assets/src/: asset.rs  asset_manager.rs  error.rs  lib.rs  loader.rs  types.rs
blox-assets/src/asset_manager/: indexing.rs
blox-interpreter/: Cargo.toml
blox-interpreter/src/: error.rs  expression.rs  lib.rs  main.rs  module.rs  program.rs  repl.rs  scope.rs  statement.rs  value.rs
blox-interpreter/src/expression/: assignment.rs  binary_expression.rs  casting.rs  condition.rs  expression_term.rs  function_call.rs  method_call.rs
blox-interpreter/src/expression/assignment/: array_index.rs  identifier.rs  object_index.rs
blox-interpreter/src/expression/expression_term/: array.rs  array_index.rs  array_slice.rs  if_term.rs  object.rs  object_index.rs
blox-interpreter/tests/: database.rs
blox-interpreter/tests/common/: mod.rs
blox-language/: Cargo.toml
blox-language/examples/: test.blox
blox-language/src/: ast.rs  error.rs  grammar.pest  lib.rs  location.rs  parser.rs  program.lalrpop  program.pest
blox-language/src/ast/: argument.rs  block.rs  definition.rs  expression.rs  expression_term.rs  identifier.rs  import.rs  imported_symbol.rs  operator.rs  parameter.rs  program.rs  statement.rs
blox-language/src/ast/expression_term/: array.rs  array_index.rs  array_slice.rs  function_call.rs  if_expression.rs  literal.rs  method_call.rs  object.rs  object_index.rs
blox-persistence/: Cargo.toml
blox-persistence/src/: db_connection.rs  lib.rs  query_builder.rs
blox-server/: Cargo.toml
blox-server/src/: ast.rs  environment.rs  loader.rs  main.rs  program.lalrpop  router.rs
blox-server/src/assets/: mod.rs  program.rs  static_file.rs  template.rs
blox-server/src/commands/: console.rs  mod.rs  server.rs
docs/: design.adoc  index.adoc
examples/landing/app/routes/about/: index.html.hbs
examples/landing/routes/: index.blox  index.html.hbs
examples/simple/routes/: index.blox  index.html.hbs
examples/todomvc/: tailwind.config.js
examples/todomvc/app/models/: Item.blox
examples/todomvc/app/routes/: index.html.hbs
examples/todomvc/app/routes/items/: create.blox
examples/todomvc/app/static/: application.css
examples/todomvc/routes/lists/: index.html.hbs  show.html.hbs
src/: ast.rs  main.rs  program.lalrpop  template.rs
stdlib/: database.blox  list.blox  math.blox
tests/: calculator.blox
tree-sitter-blox/: Cargo.toml  grammar.js
tree-sitter-blox/queries/: highlights.scm  locals.scm
tree-sitter-blox/src/: grammar.json  node-types.json  parser.c
tree-sitter-blox/test/corpus/: Expressions.txt  Function definitions.txt  Lambdas.txt  Literals.txt  Operators.txt
zed-extension-blox/: .gitignore  extension.toml
zed-extension-blox/grammars/: blox.wasm
zed-extension-blox/languages/blox/: config.toml  highlights.scm
