[package]
name = "blox"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19"

[dependencies]
anyhow = "1.0"
clap = "2.33"
lalrpop-util = "0.19"
regex = "1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
assets_manager = { version = "0.4" }
handlebars = "3.5"
