[package]
name = "blox-assets"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", default-features = false, features = [
    "std",
    "attributes",
] }
anyhow = { version = "1", default-features = false }
walkdir = { version = "2", default-features = false }
