[package]
name = "blox-interpreter"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blox-language = { path = "../blox-language" }
tracing = "0.1"
anyhow = "1.0"
clap = { version = "4.5.20", default-features = false, features = [
    "std",
    "derive",
] }
rustyline = { version = "14", default-features = false, features = [
    "with-file-history",
] }
rust_decimal = { version = "1.36", default-features = false }
