[package]
name = "blox-interpreter"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blox-language = { path = "../blox-language" }
tracing = { version = "0.1", default-features = false }
clap = { version = "4.5.20", default-features = false, features = [
    "std",
    "derive",
] }
rustyline = { version = "15", default-features = false, features = [
    "with-file-history",
] }
rust_decimal = { version = "1.36", default-features = false }
stacker = { version = "0.1", default-features = false }
