[package]
name = "blox-language"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blox-assets = { path = "../blox-assets" }
lazy_static = { version = "1.5", default-features = false }
pest = { version = "2.7", default-features = false, features = ["std"] }
pest_derive = { version = "2.7", default-features = false, features = [
    "std",
    "grammar-extras",
] }
rust_decimal = { version = "1.36", default-features = false }
