[package]
name = "blox-language"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blox-assets = { path = "../blox-assets" }
tree-sitter = "0.24.6"
tree-sitter-blox = { git = "https://github.com/michaelmelanson/tree-sitter-blox" }
rust_decimal = { version = "1.36", default-features = false }
tracing = { version = "0.1", default-features = false }
