[package]
name = "blox"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blox-assets = { path = "../blox-assets" }
blox-interpreter = { path = "../blox-interpreter" }
blox-language = { path = "../blox-language" }
anyhow = "1.0"
clap = "2.33"
regex = "1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
handlebars = "3.5"
tracing = "0.1"
tracing-subscriber = "0.2"
