[package]
name = "blox-server"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1"
blox-assets = { path = "../blox-assets" }
blox-interpreter = { path = "../blox-interpreter" }
blox-language = { path = "../blox-language" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
handlebars = "6"
tracing = "0.1"
